# pi-repo-baby

./: .gitignore  README.md  index.ts  package.json  pyproject.toml  repo-baby.py
docs/: SKILL.md  _meta.json
src/repo_baby/: __init__.py  __main__.py  models.py
src/repo_baby/engine/: cache.py  frameworks.py  rank.py  references.py  symbols.py
src/repo_baby/modes/: map.py  overview.py
src/scope/: __init__.py  __main__.py
src/scope/engine/: _utils.py  cache.py  discover.py  frameworks.py  git.py  rank.py  references.py  symbols.py
src/scope/modes/: map.py  pairs.py
tests/: test_cache.py  test_discover.py  test_rank.py  test_references.py
